# agentllm

./: .containerignore  .env.secrets.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  Containerfile  Makefile  README.md  REFACTOR_PROMPTS_SHEET.md  RHDH_Release_Manager_Reference.xlsx  VERIFY_MARKDOWN_LOGGING.md  compose.yaml  cronjob.yaml  justfile  noxfile.py  proxy_config.yaml  pyproject.toml  rm_scenarios.md
.claude/: settings.json  settings.local.json
.claude/commands/: commit.md  rm-test.md
.github/workflows/: jira-auto-triage.yml
docs/: testing-guide.md
docs/agents/: jira_triager_automation.md  jira_triager_guide.md  release_manager.md  store-manager-comprehensive-test.md  store-manager-test-questions.md  store-manager.md
docs/templates/: release_manager_prompt_guide.md  release_manager_sheet.md  release_manager_sheet_usage.md  release_manager_system_prompt.md
examples/: test_rich_filter_access.py  token_storage_example.py
exports/: release manager.csv
exports/release manager_sheets/: Actions _ Workflows.csv  Configuration _ Setup.csv  Jira Queries.csv  Maintenance Guide.csv  Prompts.csv  Slack Templates.csv  Tools Reference.csv
just/: release_manager.just
scripts/: README.md  auto_triage.py  generate_synthetic_jira_data.py  send_slack_notification.py  setup_database_from_secrets.py  tokens.py
tests/: conftest.py  test_custom_handler.py  test_jira_triager_agent.py  test_release_manager.py  test_release_manager_scenarios.py  test_release_manager_toolkit.py  test_rhdh_tester_agent.py  test_sprint_reviewer.py  test_store_manager_agent.py
(+53 files in other folders)
